--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <div>
       <div class="hero-tag">Electronics Engineering · KMITL · Class of 2026</div>
       <h1>Muthaprapai<br><span>Trairat</span></h1>
-      <p class="hero-sub">Electronics &amp; Test Engineer</p>
+      <p class="hero-sub">Electronics Engineer</p>
       <p class="hero-desc">Passionate about energy solutions, smart grid, and embedded systems. Bridging hardware and software — from PCB design to automation tools that make engineers' work faster and more reliable.</p>
       <div class="hero-btns">
         <a href="#projects" class="btn-primary">View Projects →</a>
