--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
       </div>
     </div>
     <div class="hero-photo">
-      <div class="hero-photo-emoji">👩‍💻</div>
-      <div class="hero-photo-text">Add your photo here</div>
+      <img src="photo.png" alt="Muthaprapai"
+  style="width:100%;height:100%;object-fit:cover;object-position:center top;">
     </div>
   </div>
 </div>
