--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       </div>
     </div>
     <div class="hero-photo">
-      <img src="photo.png" alt="Muthaprapai"
+      <img src="photo2.jpg" alt="Muthaprapai"
   style="width:100%;height:100%;object-fit:cover;object-position:center top;">
     </div>
   </div>
