--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
       <div class="hero-tag">Electronics Engineering · KMITL · Class of 2026</div>
       <h1>Muthaprapai<br><span>Trairat</span></h1>
       <p class="hero-sub">Electronics Engineer</p>
-      <p class="hero-desc">Passionate about energy solutions, smart grid, and embedded systems. Bridging hardware and software — from PCB design to automation tools that make engineers' work faster and more reliable.</p>
+      <p class="hero-desc">Passionate about energy solutions, smart grid, and programming. Bridging hardware and software — from PCB design to automation tools that make engineers' work faster and more reliable.</p>
       <div class="hero-btns">
         <a href="#projects" class="btn-primary">View Projects →</a>
         <a href="#contact" class="btn-outline">Get in Touch</a>
